fixing inputs on mobile

--- a/src/app/shared/input/input.component.css
+++ b/src/app/shared/input/input.component.css
@@ -2,6 +2,12 @@
     width: 360px;
 }
 
+@media (max-width: 400px) {
+    .field {
+        width: 300px;
+    }
+}
+
 .field:nth-child(1) {
     margin-top: 0.5em;
 }
